--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css?family=Yeseva+One&display=swap&subset=cyrillic" rel="stylesheet">
   <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css">
+  <link rel="stylesheet" href="css/animate.css">
   <link rel="stylesheet" href="css/style.css">
 
   <title>SASS</title>
@@ -15,7 +16,7 @@
 <header class="header">
   <div class="container">
     <div class="menu">
-      <div class="logo menu__logo">Repair Design Project</div>
+      <div class="logo menu__logo wow bounceInLeft"data-wow-delay="0.2s" >Repair Design Project</div>
       <div class="nav menu__nav">
         <a href="#" class="nav__items">Главная</a>
         <a href="#" class="nav__items">Проекты</a>
@@ -26,7 +27,7 @@
       </div>
       <div class="contacts menu__contacts">
         <a href="tel:+79997683299" class="phone contacts__phone">+7 (999) 768-32-99</a>
-        <button class="button contacts__button button--primary" data-toggle='modal'>Заказать звонок</button>
+        <button class="button contacts__button button--primary wow bounceInDown" data-wow-delay="0.8s" data-toggle='modal'>Заказать звонок</button>
       </div>
     </div>
     <!-- /.menu -->
@@ -43,8 +44,8 @@
     </div>
     <div class="container">
       <div class="hero__content">
-        <h1 class="title hero__title">турецкий ремонт в&nbsp<span class="title--primary">Ростове-на-дону</span></h1>
-        <p class="hero__text">Получите готовый ремонт под ключ в срок с экономией рабочего времени до 45 дней и 20% от стоимости материалов за счет организации работы</p>
+        <h1 class="title hero__title wow bounceInRight" data-wow-delay="0.4s">турецкий ремонт в&nbsp<span class="title--primary">Ростове-на-дону</span></h1>
+        <p class="hero__text wow bounceInRight" data-wow-delay="0.6s">Получите готовый ремонт под ключ в срок с экономией рабочего времени до 45 дней и 20% от стоимости материалов за счет организации работы</p>
         <button class="button hero__button button--primary" data-toggle='modal'>Рассчитать стоимость</button>
         <button class="button hero__button button--outline">Отправить заявку</button>
       </div>
@@ -464,6 +465,7 @@
 
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 <script src="https://unpkg.com/swiper/js/swiper.min.js"></script>
+<script src="js/wow.min.js"></script>
 <script src="js/main.js"></script>
 
 </body>
