--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       </div>
       <div class="contacts menu__contacts">
         <a href="tel:+79997683299" class="phone contacts__phone">+7 (999) 768-32-99</a>
-        <button class="button contacts__button button--primary wow bounceInDown" data-wow-delay="0.8s" data-toggle='modal'>Заказать звонок</button>
+        <button class="button contacts__button button--primary wow fadeInDown" data-wow-delay="0.8s" data-toggle='modal'>Заказать звонок</button>
       </div>
     </div>
     <!-- /.menu -->
@@ -52,7 +52,7 @@
       <!-- /.hero__content -->
     </div>
   <!-- /.container -->
-    <a href="#" class="hero__scroll-down">листайте вниз</a>
+    <a href="#" class="hero__scroll-down wow flash" data-wow-delay="5s">листайте вниз</a>
   </section>
   <!-- /.hero -->
 
@@ -62,9 +62,9 @@
       <div class="row projects__row">
         <div class="col-50 projects--col-50">
           <div class="section-title section-title--left">
-              <h2 class="section-title__heading projects__heading section-title--primary">Завершенные <span class="section-title__word">проекты</span></h2>
+              <h2 class="section-title__heading projects__heading section-title--primary wow bounceInLeft">Завершенные <span class="section-title__word">проекты</span></h2>
               <!-- /.section-title__heading -->
-              <p class="section-title__text">На сайте представлена ​​лишь небольшая часть работ, выполняемых нашей компанией. За 14 лет работы на строительном рынке мы осчастливили более 1000 семей</p>
+              <p class="section-title__text wow bounceInLeft" data-wow-delay="0.2s">На сайте представлена ​​лишь небольшая часть работ, выполняемых нашей компанией. За 14 лет работы на строительном рынке мы осчастливили более 1000 семей</p>
           </div>
            <!-- Slider main container -->
            <div class="swiper-container">
@@ -111,7 +111,7 @@
             </div>
               <div class="swiper-button-prev"></div>
               <div class="swiper-pagination"></div>
-              <div class="swiper-button-next"></div>
+              <div class="swiper-button-next wow flash" data-wow-duration="4s" data-wow-iteration="5"></div>
             </div>
         </div>
         <!-- /.col-50 -->
@@ -153,13 +153,13 @@
       <div class="section-title control__section-title section-title--light">
         <h2 class="section-title__heading">Онлайн контроль</h2>
         <!-- /.section-title__heading -->
-        <div class="section-title__image">
+        <div class="section-title__image ">
           <img src="img/video.svg" alt="video">
         </div>
         <!-- /.section-title__image -->
       </div>
       <!-- /.section-title -->
-      <div class="control__video video">
+      <div class="control__video video  wow pulse">
         <img src="img/play.svg" alt="" class="video__play">
       </div>
       <!-- /.control__video video -->
@@ -168,15 +168,15 @@
       </p>
       <!-- /.control__text -->
       <form action="#" class="form control__form">
-        <div class="control__input-group">
+        <div class="control__input-group wow fadeInDown" data-wow-delay="0.4s">
           <label for="user-name" class="label form__label control__label">Имя</label>
           <input type="text" class="input form__input control__input" id="user-name" placeholder="Как вас зовут">   
         </div>
-        <div class="control__input-group">
+        <div class="control__input-group wow fadeInDown" data-wow-delay="0.6s">
           <label for="user-phone" class="label form__label control__label">Телефон</label>
           <input type="tel" class="input form__input control__input" id="user-phone" placeholder="Ваш номер телефона">  
         </div>
-          <button class="button button--primary control__button">Отправить</button>
+          <button class="button button--primary control__button wow fadeInDown" data-wow-delay="0.8s">Отправить</button>
           <div class="policy control__policy">
             <input type="checkbox" name="policy-checkbox" id="policy-checkbox" class="policy__checkbox" checked>
             <label for="policy-checkbox" class="policy__label  control__policy-label">я соглашаюсь с обработкой данных</label>
